# linphone

./: CMakeLists.txt  configure.ac
coreapi/: CMakeLists.txt  authentication.c  chat.c  factory.c  friend.c  linphone_proxy_config.h  linphonecall.c  linphonecore.c  linphonecore.h  linphonecore_jni.cc  lpconfig.c  lpconfig.h  misc.c  private.h  vcard.cc  vtables.c
include/: CMakeLists.txt
include/linphone/: account_creator.h  address.h  core.h  factory.h  vcard.h
java/common/org/linphone/core/: LinphoneCallStats.java
java/impl/org/linphone/core/: LinphoneCallStatsImpl.java  LinphoneCoreImpl.java
tester/: call_single_tester.c  presence_server_tester.c  presence_tester.c
wrapper/cpp/: CMakeLists.txt  abstractapi.py  class_header.mustache  class_impl.mustache  genheaders.py  object.cc  object.cpp  object.hh
wrappers/cpp/: CMakeLists.txt  abstractapi.py  api.xml  class_header.mustache  class_impl.mustache  genheaders.py  object.cc  object.hh
